--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "pod": "npx pod-install"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "react": "18.2.0",
-    "react-native": "0.74.4"
+    "react-native": "0.74.4",
+    "react-native-uuid": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
